fixed ta info img and text alignment on upper right, started OH info style update on upper left

--- a/src/styles/session/SessionInformationHeader.scss
+++ b/src/styles/session/SessionInformationHeader.scss
@@ -9,6 +9,24 @@
     padding: 5px 0;
   }
 
+  .TAInfo {
+    img {
+      border-radius: 50%;
+    }
+
+    text-align: left;
+    margin-bottom: 0;
+
+    p {
+      padding-left: 15px !important;
+    }
+
+    a {
+      font-size: 12px;
+      padding-left: 15px;
+    }
+  }
+
   .switchWrapper {
     display: flex;
     flex-direction: row;
@@ -59,6 +77,7 @@
       display: inline-block;
 
       .Location {
+        background-color: #EAEAEA;
         font-size: 20px;
         font-weight: 500;
         margin-bottom: 5px;
@@ -71,9 +90,9 @@
         margin-bottom: 8px;
       }
 
-      .Date {
-        margin-bottom: 20px;
-      }
+      // .Date {
+      //   margin-bottom: 20px;
+      // }
 
       a {
         color: white;
@@ -111,6 +130,7 @@
       color: #4d4d4d;
       font-size: 16px;
       padding-left: 10px;
+      margin-bottom: 0px;
     }
 
     .red {
@@ -305,6 +325,7 @@
   }
 
   .Title {
+    margin-top: 20px;
     margin-bottom: 5px;
   }
 
